force-app/main/default/objects/Waste_Category__c/Waste_Category__c.object-meta.xml
<CustomObject>
    <label>Waste Category</label>
    <nameField>
        <label>Waste Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waste Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>