force-app/main/default/objects/Waste_Category__c/fields/Chapter_Description__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Description__c</fullName>
    <label>Chapter Description</label>
    <type>TextArea</type>
</CustomField>