force-app/main/default/objects/Waste_Category__c/fields/Chapter_Number__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Number__c</fullName>
    <label>Chapter Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>