force-app/main/default/objects/Waste_Category__c/fields/Codes__c.field-meta.xml
<CustomField>
    <fullName>Codes__c</fullName>
    <label>Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>