force-app/main/default/objects/Waste_Category__c/fields/Compliance_Document__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Document</label>
    <referenceTo>Compliance_Doc__c</referenceTo>
    <relationshipLabel>Waste Categories</relationshipLabel>
    <relationshipName>Waste_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>