force-app/main/default/objects/Waste_Category__c/fields/ConsignmentNote_ProcessGivingWaste__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentNote_ProcessGivingWaste__c</fullName>
    <label>Process giving rise to waste</label>
    <length>25</length>
    <type>Text</type>
</CustomField>