force-app/main/default/objects/Waste_Category__c/fields/EWC_Code_Compact__c.field-meta.xml
<CustomField>
    <fullName>EWC_Code_Compact__c</fullName>
    <label>EWC Code Compact</label>
    <length>10</length>
    <type>Text</type>
</CustomField>