force-app/main/default/objects/Waste_Category__c/fields/Hazardous__c.field-meta.xml
<CustomField>
    <fullName>Hazardous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous?</label>
    <type>Checkbox</type>
</CustomField>