force-app/main/default/objects/Waste_Category__c/fields/Related_Codes__c.field-meta.xml
<CustomField>
    <fullName>Related_Codes__c</fullName>
    <label>Related Codes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>