force-app/main/default/objects/Waste_Category__c/fields/Subchapter_Code__c.field-meta.xml
<CustomField>
    <fullName>Subchapter_Code__c</fullName>
    <label>Subchapter Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>