force-app/main/default/objects/Waste_Category__c/fields/Subchapter_Description__c.field-meta.xml
<CustomField>
    <fullName>Subchapter_Description__c</fullName>
    <label>Subchapter Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>