force-app/main/default/objects/Waste_Category__c/fields/WasteManagementOperationRorDcode__c.field-meta.xml
<CustomField>
    <fullName>WasteManagementOperationRorDcode__c</fullName>
    <label>Waste Management Operation (R or D code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>